--- a/3rdGradeTeamProjectSecond/3rdGradeTeamProjectSecond/3rdGradeTeamProjectSecond.vcxproj.filters
+++ b/3rdGradeTeamProjectSecond/3rdGradeTeamProjectSecond/3rdGradeTeamProjectSecond.vcxproj.filters
@@ -78,9 +78,6 @@
     <ClCompile Include="manual.cpp">
       <Filter>ソース ファイル\Mode</Filter>
     </ClCompile>
-    <ClCompile Include="menu.cpp">
-      <Filter>ソース ファイル\Mode</Filter>
-    </ClCompile>
     <ClCompile Include="mode.cpp">
       <Filter>ソース ファイル\Mode</Filter>
     </ClCompile>
@@ -228,6 +225,12 @@
     <ClCompile Include="ground.cpp">
       <Filter>ソース ファイル\Obj</Filter>
     </ClCompile>
+    <ClCompile Include="ranking.cpp">
+      <Filter>ソース ファイル\Mode</Filter>
+    </ClCompile>
+    <ClCompile Include="ranking2.cpp">
+      <Filter>ソース ファイル\Mode</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="effectData.h">
@@ -249,9 +252,6 @@
       <Filter>ヘッダー ファイル\Mode_h</Filter>
     </ClInclude>
     <ClInclude Include="manual.h">
-      <Filter>ヘッダー ファイル\Mode_h</Filter>
-    </ClInclude>
-    <ClInclude Include="menu.h">
       <Filter>ヘッダー ファイル\Mode_h</Filter>
     </ClInclude>
     <ClInclude Include="mode.h">
@@ -391,6 +391,12 @@
     </ClInclude>
     <ClInclude Include="ground.h">
       <Filter>ヘッダー ファイル\Obj_h</Filter>
+    </ClInclude>
+    <ClInclude Include="ranking.h">
+      <Filter>ヘッダー ファイル\Mode_h</Filter>
+    </ClInclude>
+    <ClInclude Include="ranking2.h">
+      <Filter>ヘッダー ファイル\Mode_h</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
